--- a/oauth2-server/glide.yaml
+++ b/oauth2-server/glide.yaml
@@ -3,3 +3,11 @@ import:
 - package: github.com/urfave/cli
   version: v1.20.0
 - package: github.com/RichardKnop/logging
+- package: github.com/jinzhu/configor
+- package: github.com/jinzhu/gorm
+- package: google.golang.org/appengine
+  repo: https://github.com/golang/appengine
+  vcs: git
+  subpackages:
+  - cloudsql
+- package: github.com/pborman/uuid
