--- a/oauth2-server/glide.yaml
+++ b/oauth2-server/glide.yaml
@@ -3,6 +3,7 @@ import:
 - package: github.com/urfave/cli
   version: v1.20.0
 - package: github.com/RichardKnop/logging
+- package: github.com/RichardKnop/go-fixtures
 - package: github.com/jinzhu/configor
 - package: github.com/jinzhu/gorm
 - package: google.golang.org/appengine
