--- a/oauth2-server/glide.yaml
+++ b/oauth2-server/glide.yaml
@@ -12,3 +12,10 @@ import:
   subpackages:
   - cloudsql
 - package: github.com/pborman/uuid
+- package: github.com/urfave/negroni
+- package: github.com/phyber/negroni-gzip
+  # subpackages:
+  # - gzip
+- package: github.com/gorilla/mux
+- package: gopkg.in/tylerb/graceful.v1
+  version: ~1.2.15
